--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Alexander Aghili 
     - name: Date of Birth
-      value: 14th March 1879
+      value: 20th July 2004 
     - name: Languages
-      value: English, German
+      value: English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: B.S. 
+      institution: University of Calfornia, Santa Cruz 
+      year: 2022-2026 
       description:
         - Description 1.
         - Description 2.
